--- a/package.json
+++ b/package.json
@@ -10,18 +10,18 @@
   },
   "dependencies": {
     "@tailwindcss/forms": "^0.5.10",
-    "autoprefixer": "^10.4.20",
+    "autoprefixer": "^10.4.14",
     "emailjs-com": "^3.2.0",
     "framer-motion": "^12.4.7",
     "next": "15.2.0",
     "next-seo": "^6.6.0",
-    "postcss": "^8.5.3",
+    "postcss": "^8.4.21",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
     "react-icons": "^5.5.0",
     "sharp": "^0.33.5",
-    "tailwindcss": "^4.0.9"
+    "tailwindcss": "^3.3.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
@@ -31,6 +31,7 @@
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.2.0",
+    "postcss-nested": "^7.0.2",
     "typescript": "^5"
   }
 }
